Added text to html

--- a/First_Website_Project/index.html
+++ b/First_Website_Project/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang = en>
     <head>
-        <title>First Website</title>
+        <title>Cella's Kitchen</title>
 		<meta charset = "utf-8">
 	</head>
 	<body>
         <header>
-            <h1>Basic HTML Template</h1>
+            <h1>Learn to cook with Cella!</h1>
         </header>
     <!--Navigation Bar-->
     <div>
@@ -14,7 +14,7 @@
             <ul>
                 <a href="#home" id="link"><li>HOME</li></a>
                 <a href="#gallery"><li>GALLERY</li></a>
-                <a href="#contact"><li>RESERVATIONS</li></a>
+                <a href="#contact"><li>BOOKINGS</li></a>
             </ul>
         </div>
     </div>
@@ -41,7 +41,7 @@
                         <img src="images/img1.jpg" alt="Broccoli">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Broccoli!</p>
                          </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         <img src="images/img2.jpg" alt="Brussel Sprouts">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Brussel Sprouts!</p>
                          </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <img src="images/img3.jpg" alt="Tomatoes">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Tomatoes!</p>
                          </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                         <img src="images/img4.jpg" alt="Spinach">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Spinach!</p>
                          </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                         <img src="images/img5.jpg" alt="Avocado">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Avocado!</p>
                          </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         <img src="images/img6.jpg" alt="Mushroom">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Mushroom!</p>
                          </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                         <img src="images/img7.jpg" alt="Carrots">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Carrots!</p>
                          </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                         <img src="images/img8.jpg" alt="Beets">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Beets!</p>
                          </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <img src="images/img9.jpg" alt="Peppers">
                         <div>
                             <h3>Click to enlarge</h3>
-                            <p>blah blah</p>
+                            <p>Learn all recipes with Peppers!</p>
                          </div>
                     </div>
                 </div>
@@ -151,18 +151,17 @@
     <!--RESERVATIONS-->
     <div id="contact">
         <div>
-            <h1>RSVP</h1>
+            <h1>BOOKINGS</h1>
             <div>
-                <h2><span>blah blah</span>
-                    <br>rsvp today!
+                <h2><span></span>
+                    <br>Book today!
                 </h2>
                 <p>please provide contact</p>
                 <div>
                     <form action="" method="post">
-                        <input>
-                        <input>
-                        <input>
-                        <input>
+                        Last Name = <input type="text" name="Last_name"><br>
+                        First Name = <input type="text" name="First_name"><br>
+                        Email = <input type="text" name="Email"><br>
                         <div class="form spacer">
                             <label class="terms">Terms and Conditions</label>
                         </div>
