--- a/One-Page-Website/one_page_website.html
+++ b/One-Page-Website/one_page_website.html
@@ -20,13 +20,13 @@
         
 		<div id="Photos">
             <div>
-                <img src="../First_Website_Project/images/img1.jpg" alt="image1">
+                <img src="../First_Website_Project/images/img4.jpg" alt="image1" height="150" width="150">
             </div>
             <div>
-                <img src="../First_Website_Project/images/img2.jpg" alt="image2">
+                <img src="../First_Website_Project/images/img2.jpg" alt="image2" height="150" width="200">
             </div>
             <div>
-                <img src="../First_Website_Project/images/img3.jpg" alt="image3">
+                <img src="../First_Website_Project/images/img3.jpg" alt="image3" height="150" width="200">
             </div>
         </div>
 
