--- a/First_Website_Project/index.html
+++ b/First_Website_Project/index.html
@@ -165,6 +165,10 @@
                         <div class="form spacer">
                             <label class="terms">Terms and Conditions</label>
                         </div>
+                        <div class="submit">
+                            <label class="terms">Terms and Conditions</label>
+                            <input type="submit" value="Submit">
+                        </div>
                     </form>
                 </div>
             </div>
