--- a/Basic.html
+++ b/Basic.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang = en>
-    <head>
-		<title></title>
-		<meta charset = "utf-8">
-	</head>
-	<body>
-	
-		
-	</body>
-	<footer></footer>
+<html lang=en>
+
+<head>
+	<title></title>
+	<meta charset="utf-8">
+</head>
+
+<body>
+	<header>
+		<p>Added another paragraph</p>
+	</header>
+
+</body>
+<footer></footer>
+
 </html>
