--- a/Basic.html
+++ b/Basic.html
@@ -4,14 +4,13 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
+    <link rel="" href="">
 </head>
 
 <body>
-	<header>
-		<p>Added another paragraph</p>
-	</header>
+
 
 </body>
-<footer></footer>
+
 
 </html>
